fix: spoiler / redaction css in dark mode

--- a/static/luvdb/css/style.css
+++ b/static/luvdb/css/style.css
@@ -185,7 +185,18 @@ a[href$="/s"].revealed {
     left: 0;
     top: 0;
     height: 100%;
-    background: #dddddd;
+    background: #fff;
+}
+
+
+[data-bs-theme="dark"] a[href$="/spoiler"].revealed,
+[data-bs-theme="dark"] a[href$="/s"].revealed {
+    color: inherit;
+    text-decoration: none;
+    left: 0;
+    top: 0;
+    height: 100%;
+    background: rgb(33, 37, 41);
 }
 
 /* popup footnote */
